--- a/hacktrin/css/stylish-portfolio.css
+++ b/hacktrin/css/stylish-portfolio.css
@@ -35,8 +35,19 @@ body {
   font-weight: 700;
   margin: 0;
   padding: 0;
+  text-decoration: underline;
 }
 
+
+#content-desktop {display: block;}
+#content-mobile {display: none;}
+
+@media screen and (max-width: 768px) {
+
+#content-desktop {display: none;}
+#content-mobile {display: block;}
+
+}
 
 /* Custom Button Styles */
 
