--- a/hacktrin/css/stylish-portfolio.css
+++ b/hacktrin/css/stylish-portfolio.css
@@ -39,7 +39,7 @@ body {
 .text-vertical-center {
   display: table-cell;
   text-align: center;
-  vertical-align: middle;
+  vertical-align: center;
 }
 
 .text-vertical-center h1 {
